--- a/app/src/main/res/layout/calculator_view.xml
+++ b/app/src/main/res/layout/calculator_view.xml
@@ -13,9 +13,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginRight="8dp"
+        android:layout_marginTop="8dp"
         android:ems="10"
         android:enabled="true"
         android:focusableInTouchMode="false"
@@ -24,17 +22,28 @@
         android:selectAllOnFocus="false"
         android:singleLine="true"
         android:textColor="#008800"
+        app:layout_constraintEnd_toStartOf="@id/backspaceButton"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+
+    <ImageButton
+        android:id="@+id/backspaceButton"
+        android:layout_width="wrap_content"
+        android:layout_height="0dp"
+        android:layout_marginEnd="8dp"
+        app:layout_constraintBottom_toBottomOf="@+id/input_value"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toEndOf="@+id/input_value"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/backspace" />
 
     <ListView
         android:id="@+id/stack"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginStart="8dp"
-        android:layout_marginLeft="8dp"
         android:layout_marginEnd="8dp"
-        android:layout_marginRight="8dp"
         android:clickable="false"
         android:focusableInTouchMode="false"
         android:isScrollContainer="true"
@@ -320,5 +329,4 @@
                 tools:layout_editor_absoluteY="259dp" />
         </TableRow>
     </TableLayout>
-
 </android.support.constraint.ConstraintLayout>
