--- a/app/src/main/res/layout/calculator_view.xml
+++ b/app/src/main/res/layout/calculator_view.xml
@@ -35,7 +35,8 @@
         app:layout_constraintBottom_toBottomOf="@+id/input_value"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/input_value"
-        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintTop_toTopOf="@id/input_value"
+        android:background="@android:color/white"
         app:srcCompat="@drawable/backspace" />
 
     <ListView
@@ -63,9 +64,9 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
-        android:layout_marginLeft="8dp"
         android:layout_marginEnd="8dp"
-        android:layout_marginRight="8dp"
+        android:layout_marginBottom="8dp"
+        android:background="#eee"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -77,65 +78,75 @@
 
             <Button
                 android:id="@+id/button_fn1"
-                android:layout_width="0dp"
+                style="?android:attr/borderlessButtonStyle"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_margin="2dp"
                 android:layout_weight="1"
-                android:background="@android:color/darker_gray"
-                android:text="@string/select"
+                android:background="#ddd"
+                android:gravity="center"
+                android:text="@string/undefined_button"
                 android:textAppearance="@style/TextAppearance.AppCompat.Widget.PopupMenu.Small"
-                android:textColor="@android:color/background_light"
                 android:textSize="12sp"
                 tools:layout_editor_absoluteX="89dp"
                 tools:layout_editor_absoluteY="259dp" />
 
             <Button
                 android:id="@+id/button_fn2"
-                android:layout_width="0dp"
+                style="?android:attr/borderlessButtonStyle"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_margin="2dp"
                 android:layout_weight="1"
-                android:background="@android:color/darker_gray"
-                android:text="@string/select"
+                android:background="#ddd"
+                android:gravity="center"
+                android:text="@string/undefined_button"
                 android:textAppearance="@style/TextAppearance.AppCompat.Widget.PopupMenu.Small"
-                android:textColor="@android:color/background_light"
                 android:textSize="12sp"
                 tools:layout_editor_absoluteX="89dp"
                 tools:layout_editor_absoluteY="259dp" />
 
             <Button
                 android:id="@+id/button_fn3"
-                android:layout_width="0dp"
+                style="?android:attr/borderlessButtonStyle"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_margin="2dp"
                 android:layout_weight="1"
-                android:background="@android:color/darker_gray"
-                android:text="@string/select"
+                android:background="#ddd"
+                android:gravity="center"
+                android:text="@string/undefined_button"
                 android:textAppearance="@style/TextAppearance.AppCompat.Widget.PopupMenu.Small"
-                android:textColor="@android:color/background_light"
                 android:textSize="12sp"
                 tools:layout_editor_absoluteX="89dp"
                 tools:layout_editor_absoluteY="259dp" />
 
             <Button
                 android:id="@+id/button_fn4"
-                android:layout_width="0dp"
+                style="?android:attr/borderlessButtonStyle"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_margin="2dp"
                 android:layout_weight="1"
-                android:background="@android:color/darker_gray"
-                android:text="@string/select"
+                android:background="#ddd"
+                android:gravity="center"
+                android:text="@string/undefined_button"
                 android:textAppearance="@style/TextAppearance.AppCompat.Widget.PopupMenu.Small"
-                android:textColor="@android:color/background_light"
                 android:textSize="12sp"
                 tools:layout_editor_absoluteX="89dp"
                 tools:layout_editor_absoluteY="259dp" />
 
             <Button
                 android:id="@+id/button_fn5"
-                android:layout_width="0dp"
+                style="?android:attr/borderlessButtonStyle"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_margin="2dp"
                 android:layout_weight="1"
-                android:background="@android:color/darker_gray"
-                android:text="@string/select"
+                android:background="#ddd"
+                android:gravity="center"
+                android:text="@string/undefined_button"
                 android:textAppearance="@style/TextAppearance.AppCompat.Widget.PopupMenu.Small"
-                android:textColor="@android:color/background_light"
                 android:textSize="12sp"
                 tools:layout_editor_absoluteX="89dp"
                 tools:layout_editor_absoluteY="259dp" />
@@ -148,65 +159,75 @@
 
             <Button
                 android:id="@+id/button_fn6"
-                android:layout_width="0dp"
+                style="?android:attr/borderlessButtonStyle"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_margin="2dp"
                 android:layout_weight="1"
-                android:background="@android:color/darker_gray"
-                android:text="@string/select"
+                android:background="#ddd"
+                android:gravity="center"
+                android:text="@string/undefined_button"
                 android:textAppearance="@style/TextAppearance.AppCompat.Widget.PopupMenu.Small"
-                android:textColor="@android:color/background_light"
                 android:textSize="12sp"
                 tools:layout_editor_absoluteX="89dp"
                 tools:layout_editor_absoluteY="259dp" />
 
             <Button
                 android:id="@+id/button_fn7"
-                android:layout_width="0dp"
+                style="?android:attr/borderlessButtonStyle"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_margin="2dp"
                 android:layout_weight="1"
-                android:background="@android:color/darker_gray"
-                android:text="@string/select"
+                android:background="#ddd"
+                android:gravity="center"
+                android:text="@string/undefined_button"
                 android:textAppearance="@style/TextAppearance.AppCompat.Widget.PopupMenu.Small"
-                android:textColor="@android:color/background_light"
                 android:textSize="12sp"
                 tools:layout_editor_absoluteX="89dp"
                 tools:layout_editor_absoluteY="259dp" />
 
             <Button
                 android:id="@+id/button_fn8"
-                android:layout_width="0dp"
+                style="?android:attr/borderlessButtonStyle"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_margin="2dp"
                 android:layout_weight="1"
-                android:background="@android:color/darker_gray"
-                android:text="@string/select"
+                android:background="#ddd"
+                android:gravity="center"
+                android:text="@string/undefined_button"
                 android:textAppearance="@style/TextAppearance.AppCompat.Widget.PopupMenu.Small"
-                android:textColor="@android:color/background_light"
                 android:textSize="12sp"
                 tools:layout_editor_absoluteX="89dp"
                 tools:layout_editor_absoluteY="259dp" />
 
             <Button
                 android:id="@+id/button_fn9"
-                android:layout_width="0dp"
+                style="?android:attr/borderlessButtonStyle"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_margin="2dp"
                 android:layout_weight="1"
-                android:background="@android:color/darker_gray"
-                android:text="@string/select"
+                android:background="#ddd"
+                android:gravity="center"
+                android:text="@string/undefined_button"
                 android:textAppearance="@style/TextAppearance.AppCompat.Widget.PopupMenu.Small"
-                android:textColor="@android:color/background_light"
                 android:textSize="12sp"
                 tools:layout_editor_absoluteX="89dp"
                 tools:layout_editor_absoluteY="259dp" />
 
             <Button
                 android:id="@+id/button_fn10"
-                android:layout_width="0dp"
+                style="?android:attr/borderlessButtonStyle"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_margin="2dp"
                 android:layout_weight="1"
-                android:background="@android:color/darker_gray"
-                android:text="@string/select"
+                android:background="#ddd"
+                android:gravity="center"
+                android:text="@string/undefined_button"
                 android:textAppearance="@style/TextAppearance.AppCompat.Widget.PopupMenu.Small"
-                android:textColor="@android:color/background_light"
                 android:textSize="12sp"
                 tools:layout_editor_absoluteX="89dp"
                 tools:layout_editor_absoluteY="259dp" />
@@ -219,10 +240,13 @@
 
             <Button
                 android:id="@+id/button_swap"
-                android:layout_width="0dp"
+                style="?android:attr/borderlessButtonStyle"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
+                android:gravity="center"
                 android:text="SWAP"
+                android:textAlignment="center"
                 android:textColor="#0099CC"
                 android:textStyle="italic"
                 tools:layout_editor_absoluteX="89dp"
@@ -230,7 +254,9 @@
 
             <Button
                 android:id="@+id/button_7"
-                android:layout_width="0dp"
+                style="?android:attr/borderlessButtonStyle"
+                android:gravity="center"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:text="7"
@@ -241,7 +267,9 @@
 
             <Button
                 android:id="@+id/button_8"
-                android:layout_width="0dp"
+                style="?android:attr/borderlessButtonStyle"
+                android:gravity="center"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:text="8"
@@ -252,7 +280,9 @@
 
             <Button
                 android:id="@+id/button_9"
-                android:layout_width="0dp"
+                style="?android:attr/borderlessButtonStyle"
+                android:gravity="center"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:text="9"
@@ -263,7 +293,9 @@
 
             <Button
                 android:id="@+id/button_div"
-                android:layout_width="0dp"
+                style="?android:attr/borderlessButtonStyle"
+                android:gravity="center"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:text="/"
@@ -279,7 +311,9 @@
 
             <Button
                 android:id="@+id/button_dup"
-                android:layout_width="0dp"
+                style="?android:attr/borderlessButtonStyle"
+                android:gravity="center"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:text="DUP"
@@ -290,7 +324,9 @@
 
             <Button
                 android:id="@+id/button_4"
-                android:layout_width="0dp"
+                style="?android:attr/borderlessButtonStyle"
+                android:gravity="center"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:text="4"
@@ -301,7 +337,9 @@
 
             <Button
                 android:id="@+id/button_5"
-                android:layout_width="0dp"
+                style="?android:attr/borderlessButtonStyle"
+                android:gravity="center"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:text="5"
@@ -312,7 +350,9 @@
 
             <Button
                 android:id="@+id/button_6"
-                android:layout_width="0dp"
+                style="?android:attr/borderlessButtonStyle"
+                android:gravity="center"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:text="6"
@@ -323,7 +363,9 @@
 
             <Button
                 android:id="@+id/button_mul"
-                android:layout_width="0dp"
+                style="?android:attr/borderlessButtonStyle"
+                android:gravity="center"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:text="x"
@@ -339,7 +381,9 @@
 
             <Button
                 android:id="@+id/button_drop"
-                android:layout_width="0dp"
+                style="?android:attr/borderlessButtonStyle"
+                android:gravity="center"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:text="DROP"
@@ -350,7 +394,9 @@
 
             <Button
                 android:id="@+id/button_1"
-                android:layout_width="0dp"
+                style="?android:attr/borderlessButtonStyle"
+                android:gravity="center"
+                android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
                 android:text="1"
@@ -361,7 +407,9 @@
 
             <Button
                 android:id="@+id/button_2"
-                android:layout_width="0dp"
+                style="?android:attr/borderlessButtonStyle"
+                android:gravity="center"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:text="2"
@@ -372,7 +420,9 @@
 
             <Button
                 android:id="@+id/button_3"
-                android:layout_width="0dp"
+                style="?android:attr/borderlessButtonStyle"
+                android:gravity="center"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:text="3"
@@ -383,7 +433,9 @@
 
             <Button
                 android:id="@+id/button_sub"
-                android:layout_width="0dp"
+                style="?android:attr/borderlessButtonStyle"
+                android:gravity="center"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:text="-"
@@ -399,7 +451,9 @@
 
             <Button
                 android:id="@+id/button_clear"
-                android:layout_width="0dp"
+                style="?android:attr/borderlessButtonStyle"
+                android:gravity="center"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:text="CLEAR"
@@ -410,7 +464,9 @@
 
             <Button
                 android:id="@+id/button_0"
-                android:layout_width="0dp"
+                style="?android:attr/borderlessButtonStyle"
+                android:gravity="center"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:text="0"
@@ -420,16 +476,18 @@
                 tools:layout_editor_absoluteY="259dp" />
 
             <LinearLayout
-                android:layout_width="0dp"
+                android:layout_width="18dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:orientation="horizontal">
 
                 <Button
                     android:id="@+id/button_neg"
-                    android:layout_width="0dp"
+                    style="?android:attr/borderlessButtonStyle"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
+                    android:gravity="center"
                     android:text="n"
                     android:textColor="#008800"
                     android:textStyle="bold"
@@ -438,9 +496,11 @@
 
                 <Button
                     android:id="@+id/button_dot"
-                    android:layout_width="0dp"
+                    style="?android:attr/borderlessButtonStyle"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
+                    android:gravity="center"
                     android:text="."
                     android:textColor="#008800"
                     android:textStyle="bold"
@@ -450,7 +510,9 @@
 
             <Button
                 android:id="@+id/button_enter"
-                android:layout_width="0dp"
+                style="?android:attr/borderlessButtonStyle"
+                android:gravity="center"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:text="enter"
@@ -461,7 +523,9 @@
 
             <Button
                 android:id="@+id/button_add"
-                android:layout_width="0dp"
+                style="?android:attr/borderlessButtonStyle"
+                android:gravity="center"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:text="+"
