--- a/app/src/main/res/layout/calculator_view.xml
+++ b/app/src/main/res/layout/calculator_view.xml
@@ -80,7 +80,7 @@
                 android:id="@+id/button_fn1"
                 style="?android:attr/borderlessButtonStyle"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_height="26dp"
                 android:layout_margin="2dp"
                 android:layout_weight="1"
                 android:background="#ddd"
@@ -95,7 +95,7 @@
                 android:id="@+id/button_fn2"
                 style="?android:attr/borderlessButtonStyle"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_height="26dp"
                 android:layout_margin="2dp"
                 android:layout_weight="1"
                 android:background="#ddd"
@@ -110,7 +110,7 @@
                 android:id="@+id/button_fn3"
                 style="?android:attr/borderlessButtonStyle"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_height="26dp"
                 android:layout_margin="2dp"
                 android:layout_weight="1"
                 android:background="#ddd"
@@ -125,7 +125,7 @@
                 android:id="@+id/button_fn4"
                 style="?android:attr/borderlessButtonStyle"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_height="26dp"
                 android:layout_margin="2dp"
                 android:layout_weight="1"
                 android:background="#ddd"
@@ -140,7 +140,7 @@
                 android:id="@+id/button_fn5"
                 style="?android:attr/borderlessButtonStyle"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_height="26dp"
                 android:layout_margin="2dp"
                 android:layout_weight="1"
                 android:background="#ddd"
@@ -161,7 +161,7 @@
                 android:id="@+id/button_fn6"
                 style="?android:attr/borderlessButtonStyle"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_height="26dp"
                 android:layout_margin="2dp"
                 android:layout_weight="1"
                 android:background="#ddd"
@@ -176,7 +176,7 @@
                 android:id="@+id/button_fn7"
                 style="?android:attr/borderlessButtonStyle"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_height="26dp"
                 android:layout_margin="2dp"
                 android:layout_weight="1"
                 android:background="#ddd"
@@ -191,7 +191,7 @@
                 android:id="@+id/button_fn8"
                 style="?android:attr/borderlessButtonStyle"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_height="26dp"
                 android:layout_margin="2dp"
                 android:layout_weight="1"
                 android:background="#ddd"
@@ -206,7 +206,7 @@
                 android:id="@+id/button_fn9"
                 style="?android:attr/borderlessButtonStyle"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_height="26dp"
                 android:layout_margin="2dp"
                 android:layout_weight="1"
                 android:background="#ddd"
@@ -221,7 +221,89 @@
                 android:id="@+id/button_fn10"
                 style="?android:attr/borderlessButtonStyle"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_height="26dp"
+                android:layout_margin="2dp"
+                android:layout_weight="1"
+                android:background="#ddd"
+                android:gravity="center"
+                android:text="@string/undefined_button"
+                android:textAppearance="@style/TextAppearance.AppCompat.Widget.PopupMenu.Small"
+                android:textSize="12sp"
+                tools:layout_editor_absoluteX="89dp"
+                tools:layout_editor_absoluteY="259dp" />
+
+        </TableRow>
+
+
+        <TableRow
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+            <Button
+                android:id="@+id/button_fn11"
+                style="?android:attr/borderlessButtonStyle"
+                android:layout_width="wrap_content"
+                android:layout_height="26dp"
+                android:layout_margin="2dp"
+                android:layout_weight="1"
+                android:background="#ddd"
+                android:gravity="center"
+                android:text="@string/undefined_button"
+                android:textAppearance="@style/TextAppearance.AppCompat.Widget.PopupMenu.Small"
+                android:textSize="12sp"
+                tools:layout_editor_absoluteX="89dp"
+                tools:layout_editor_absoluteY="259dp" />
+
+            <Button
+                android:id="@+id/button_fn12"
+                style="?android:attr/borderlessButtonStyle"
+                android:layout_width="wrap_content"
+                android:layout_height="26dp"
+                android:layout_margin="2dp"
+                android:layout_weight="1"
+                android:background="#ddd"
+                android:gravity="center"
+                android:text="@string/undefined_button"
+                android:textAppearance="@style/TextAppearance.AppCompat.Widget.PopupMenu.Small"
+                android:textSize="12sp"
+                tools:layout_editor_absoluteX="89dp"
+                tools:layout_editor_absoluteY="259dp" />
+
+            <Button
+                android:id="@+id/button_fn13"
+                style="?android:attr/borderlessButtonStyle"
+                android:layout_width="wrap_content"
+                android:layout_height="26dp"
+                android:layout_margin="2dp"
+                android:layout_weight="1"
+                android:background="#ddd"
+                android:gravity="center"
+                android:text="@string/undefined_button"
+                android:textAppearance="@style/TextAppearance.AppCompat.Widget.PopupMenu.Small"
+                android:textSize="12sp"
+                tools:layout_editor_absoluteX="89dp"
+                tools:layout_editor_absoluteY="259dp" />
+
+            <Button
+                android:id="@+id/button_fn14"
+                style="?android:attr/borderlessButtonStyle"
+                android:layout_width="wrap_content"
+                android:layout_height="26dp"
+                android:layout_margin="2dp"
+                android:layout_weight="1"
+                android:background="#ddd"
+                android:gravity="center"
+                android:text="@string/undefined_button"
+                android:textAppearance="@style/TextAppearance.AppCompat.Widget.PopupMenu.Small"
+                android:textSize="12sp"
+                tools:layout_editor_absoluteX="89dp"
+                tools:layout_editor_absoluteY="259dp" />
+
+            <Button
+                android:id="@+id/button_fn15"
+                style="?android:attr/borderlessButtonStyle"
+                android:layout_width="wrap_content"
+                android:layout_height="26dp"
                 android:layout_margin="2dp"
                 android:layout_weight="1"
                 android:background="#ddd"
