Up to 35 function buttons can now be assigned a function
. Typo in help fixed
. 35 function buttons
. bumped version up to 2.06

--- a/app/src/main/res/layout-land/calculator_view.xml
+++ b/app/src/main/res/layout-land/calculator_view.xml
@@ -66,14 +66,14 @@
             android:scrollbarAlwaysDrawHorizontalTrack="false"
             android:scrollbarAlwaysDrawVerticalTrack="true"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toStartOf="@+id/tableLayout"
+            app:layout_constraintEnd_toStartOf="@+id/padPanel"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent">
 
         </ListView>
 
         <TableLayout
-            android:id="@+id/tableLayout"
+            android:id="@+id/padPanel"
             android:layout_width="0dp"
             android:layout_height="0dp"
             android:layout_marginStart="8dp"
