--- a/app/src/main/res/layout/calculator_view.xml
+++ b/app/src/main/res/layout/calculator_view.xml
@@ -65,8 +65,6 @@
         android:id="@+id/bottomPanel"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginEnd="8dp"
         android:background="#eee"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -75,16 +73,16 @@
 
 
         <ScrollView
+            android:id="@+id/buttonsScroll"
             android:layout_width="match_parent"
             android:layout_height="100dp"
             android:layout_marginStart="0dp"
+            android:layout_marginTop="0dp"
             android:layout_marginEnd="0dp"
             android:layout_marginBottom="0dp"
-            android:layout_marginTop="0dp"
             app:layout_constraintEnd_toEndOf="@+id/rightPanel"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="parent"
-            android:id="@+id/buttonsScroll">
+            app:layout_constraintTop_toBottomOf="parent">
 
             <TableLayout
                 android:id="@+id/functionsPanel"
@@ -674,9 +672,9 @@
             android:id="@+id/rightPanel"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginStart="8dp"
-            android:layout_marginEnd="8dp"
-            android:layout_marginBottom="8dp"
+            android:layout_marginStart="4dp"
+            android:layout_marginEnd="4dp"
+            android:layout_marginBottom="4dp"
             android:background="#eee"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
@@ -689,7 +687,7 @@
 
                 <Button
                     android:id="@+id/button_swap"
-                    style="?android:attr/borderlessButtonStyle"
+                    style="@style/Widget.AppCompat.Button.Small"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
@@ -703,7 +701,7 @@
 
                 <Button
                     android:id="@+id/button_7"
-                    style="?android:attr/borderlessButtonStyle"
+                    style="@style/Widget.AppCompat.Button.Small"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
@@ -716,7 +714,7 @@
 
                 <Button
                     android:id="@+id/button_8"
-                    style="?android:attr/borderlessButtonStyle"
+                    style="@style/Widget.AppCompat.Button.Small"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
@@ -729,7 +727,7 @@
 
                 <Button
                     android:id="@+id/button_9"
-                    style="?android:attr/borderlessButtonStyle"
+                    style="@style/Widget.AppCompat.Button.Small"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
@@ -742,7 +740,7 @@
 
                 <Button
                     android:id="@+id/button_div"
-                    style="?android:attr/borderlessButtonStyle"
+                    style="@style/Widget.AppCompat.Button.Small"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
@@ -760,7 +758,7 @@
 
                 <Button
                     android:id="@+id/button_dup"
-                    style="?android:attr/borderlessButtonStyle"
+                    style="@style/Widget.AppCompat.Button.Small"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
@@ -773,7 +771,7 @@
 
                 <Button
                     android:id="@+id/button_4"
-                    style="?android:attr/borderlessButtonStyle"
+                    style="@style/Widget.AppCompat.Button.Small"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
@@ -786,7 +784,7 @@
 
                 <Button
                     android:id="@+id/button_5"
-                    style="?android:attr/borderlessButtonStyle"
+                    style="@style/Widget.AppCompat.Button.Small"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
@@ -799,7 +797,7 @@
 
                 <Button
                     android:id="@+id/button_6"
-                    style="?android:attr/borderlessButtonStyle"
+                    style="@style/Widget.AppCompat.Button.Small"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
@@ -812,7 +810,7 @@
 
                 <Button
                     android:id="@+id/button_mul"
-                    style="?android:attr/borderlessButtonStyle"
+                    style="@style/Widget.AppCompat.Button.Small"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
@@ -831,7 +829,7 @@
 
                 <Button
                     android:id="@+id/button_drop"
-                    style="?android:attr/borderlessButtonStyle"
+                    style="@style/Widget.AppCompat.Button.Small"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
@@ -844,7 +842,7 @@
 
                 <Button
                     android:id="@+id/button_1"
-                    style="?android:attr/borderlessButtonStyle"
+                    style="@style/Widget.AppCompat.Button.Small"
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
                     android:layout_weight="1"
@@ -857,7 +855,7 @@
 
                 <Button
                     android:id="@+id/button_2"
-                    style="?android:attr/borderlessButtonStyle"
+                    style="@style/Widget.AppCompat.Button.Small"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
@@ -870,7 +868,7 @@
 
                 <Button
                     android:id="@+id/button_3"
-                    style="?android:attr/borderlessButtonStyle"
+                    style="@style/Widget.AppCompat.Button.Small"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
@@ -883,7 +881,7 @@
 
                 <Button
                     android:id="@+id/button_sub"
-                    style="?android:attr/borderlessButtonStyle"
+                    style="@style/Widget.AppCompat.Button.Small"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
@@ -901,7 +899,7 @@
 
                 <Button
                     android:id="@+id/button_clear"
-                    style="?android:attr/borderlessButtonStyle"
+                    style="@style/Widget.AppCompat.Button.Small"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
@@ -914,7 +912,7 @@
 
                 <Button
                     android:id="@+id/button_0"
-                    style="?android:attr/borderlessButtonStyle"
+                    style="@style/Widget.AppCompat.Button.Small"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
@@ -933,26 +931,28 @@
 
                     <Button
                         android:id="@+id/button_neg"
-                        style="?android:attr/borderlessButtonStyle"
+                        style="@style/Widget.AppCompat.Button.Small"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
                         android:gravity="center"
                         android:text="n"
                         android:textColor="#008800"
+                        android:textSize="12sp"
                         android:textStyle="bold"
                         tools:layout_editor_absoluteX="89dp"
                         tools:layout_editor_absoluteY="259dp" />
 
                     <Button
                         android:id="@+id/button_dot"
-                        style="?android:attr/borderlessButtonStyle"
+                        style="@style/Widget.AppCompat.Button.Small"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
                         android:gravity="center"
-                        android:text="."
+                        android:text=","
                         android:textColor="#008800"
+                        android:textSize="12sp"
                         android:textStyle="bold"
                         tools:layout_editor_absoluteX="89dp"
                         tools:layout_editor_absoluteY="259dp" />
@@ -960,7 +960,7 @@
 
                 <Button
                     android:id="@+id/button_enter"
-                    style="?android:attr/borderlessButtonStyle"
+                    style="@style/Widget.AppCompat.Button.Small"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
@@ -973,7 +973,7 @@
 
                 <Button
                     android:id="@+id/button_add"
-                    style="?android:attr/borderlessButtonStyle"
+                    style="@style/Widget.AppCompat.Button.Small"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
