. Tweaked the UI

--- a/app/src/main/res/layout-land/calculator_view.xml
+++ b/app/src/main/res/layout-land/calculator_view.xml
@@ -966,12 +966,13 @@
                             android:id="@+id/button_neg"
                             style="@style/Widget.AppCompat.Button.Small"
                             android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
+                            android:layout_height="match_parent"
                             android:layout_weight="0.5"
                             android:gravity="center"
                             android:text="n"
+                            android:textAllCaps="false"
                             android:textColor="#008800"
-                            android:textSize="9sp"
+                            android:textSize="8sp"
                             android:textStyle="bold"
                             tools:layout_editor_absoluteX="89dp"
                             tools:layout_editor_absoluteY="259dp" />
@@ -980,12 +981,12 @@
                             android:id="@+id/button_dot"
                             style="@style/Widget.AppCompat.Button.Small"
                             android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
+                            android:layout_height="match_parent"
                             android:layout_weight="0.5"
                             android:gravity="center"
-                            android:text=","
+                            android:text="."
                             android:textColor="#008800"
-                            android:textSize="9sp"
+                            android:textSize="12sp"
                             android:textStyle="bold"
                             tools:layout_editor_absoluteX="89dp"
                             tools:layout_editor_absoluteY="259dp" />
